tests/ui/mismatched_types/dont-point-return-on-E0308.stderr
error[E0308]: mismatched types
  --> $DIR/dont-point-return-on-E0308.rs:10:11
   |
LL |         f(());
   |         - ^^ expected `&()`, found `()`
   |         |
   |         arguments to this function are incorrect
   |
note: function defined here
  --> $DIR/dont-point-return-on-E0308.rs:3:10
   |
LL | async fn f(_: &()) {}
   |          ^ ------
help: consider borrowing here
   |
LL |         f(&());
   |           +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
